--- a/public/src/css/main.css
+++ b/public/src/css/main.css
@@ -141,3 +141,11 @@ body {
     padding: 5px;
     margin: 5px 0;
 }
+
+.published_label {
+    line-height: 40px;
+}
+
+.published_label input {
+    margin-right: 10px;
+}
