--- a/public/src/css/main.css
+++ b/public/src/css/main.css
@@ -149,3 +149,78 @@ body {
 .published_label input {
     margin-right: 10px;
 }
+
+/*content*/
+
+#app-layout {
+    background: #FFF;
+}
+
+/*navigation top*/
+#app-navbar-collapse ul {
+    float: left;
+}
+
+#app-navbar-collapse ul li {
+    float: left;
+    padding: 10px;
+}
+
+#app-navbar-collapse ul.navbar-right {
+    float: right;
+}
+
+#app-navbar-collapse ul li a {
+    color: #ffeeee;
+}
+#app-navbar-collapse ul.dropdown-menu li a {
+    color: #0275d8;
+}
+
+.pagination {
+    display: inline-block;
+    padding-left: 0;
+    margin: 20px 0;
+    border-radius: 4px;
+}
+
+.pagination>li {
+    display: inline;
+}
+.pagination>li:first-child>a, .pagination>li:first-child>span {
+    margin-left: 0;
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px;
+}
+.pagination>li>a, .pagination>li>span {
+    position: relative;
+    float: left;
+    padding: 6px 12px;
+    line-height: 1.42857143;
+    text-decoration: none;
+    color: #337ab7;
+    background-color: #fff;
+    border: 1px solid #ddd;
+}
+
+.pagination>.active>a, .pagination>.active>span, .pagination>.active>a:hover, .pagination>.active>span:hover, .pagination>.active>a:focus, .pagination>.active>span:focus {
+    z-index: 3;
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #337ab7;
+    cursor: default;
+}
+
+#top_user_login_link {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.form-group {
+    clear: both;
+}
+
+#top_user_login_link a.dropdown-toggle{
+    color: #FFF;
+}
