article total number

--- a/public/src/css/self.css
+++ b/public/src/css/self.css
@@ -58,3 +58,9 @@ footer.navbar{
 img.captcha-img {
     cursor: pointer;
 }
+
+.totalpage {
+    float: left;
+    line-height: 35px;
+    margin-right: 20px;
+}
