--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -1,3 +1,16 @@
+body {
+    margin:10px;
+    background-color: #FFF1E0;
+    letter-spacing: 0.5px;
+    line-height: 4.5px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+p {
+    color: #333;
+    font-size: 20pt;
+}
+
 .article-preview {
     width: 380px;
     height:520px;
