--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -1,33 +1,62 @@
 body {
-    margin:10px;
     background-color: #FFF1E0;
     letter-spacing: 0.5px;
-    line-height: 4.5px;
+    line-height: 30px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+    margin: 0 auto;
+    padding: 0;
+    text-align: left;
+
+    width: 414px;
+}
+
+.title {
+    font-size: 20pt;
+    color: #333;
+    text-align: left;
+    margin: 10px;
+    line-height: 20pt;
+}
+
+.subtitle {
+    margin: 10px;
+}
+
+.category {
+    float: left;
+    color: #9e9e9e;
+}
+
+.comment {
+    float: right;
+    color: #9e9e9e;
+}
+
+.content {
+    margin: 10px;
 }
 
 p {
     color: #333;
-    font-size: 20pt;
+    font-size: 20px;
+}
+
+.content p{
+    color: #555;
+    font-size: 20px;
+}
+
+.content p img {
+    text-align: center;
+    width: 394px;
+    height: auto;
+}
+.clearfix {
+    clear: both;
 }
 
 .article-preview {
-    width: 380px;
-    height:520px;
+    height: 736px;
     overflow-y: scroll;
-}
-
-.article-preview .title {
-    font-size: 19px;
-    font-weight: bold;
-    padding: 15px;
-}
-
-.article-preview .content p{
-    display: block;
-}
-
-.article-preview .category {
-    color: #c3b0b0;
-    padding-bottom: 15px;
 }
