--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -16,11 +16,16 @@ body {
     color: #333;
     text-align: left;
     margin: 10px;
-    line-height: 20pt;
+    line-height: 25pt;
 }
 
 .subtitle {
     margin: 10px;
+}
+
+.description{
+    margin: 10px;
+    color: #9e9e9e;
 }
 
 .category {
