--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -19,6 +19,7 @@ body {
 
 .subtitle {
     margin: 10px;
+    font-size: 15px;
 }
 
 .description{
@@ -29,11 +30,13 @@ body {
 .category {
     float: left;
     color: #9e9e9e;
+    font-size: 15px;
 }
 
 .comment {
     float: right;
     color: #9e9e9e;
+    font-size: 15px;
 }
 
 .content {
