--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -10,47 +10,49 @@ body {
 }
 
 .title {
-    font-size: 20pt;
+    font-size: 40px;
+    font-weight: bold;
     color: #333;
     text-align: left;
-    margin: 10px;
-    line-height: 25pt;
+    margin: 40px;
+    line-height: 40px;
 }
 
 .subtitle {
-    margin: 10px;
-    font-size: 15px;
+    margin: 40px;
+    font-size: 30px;
 }
 
 .description{
-    margin: 10px;
+    margin: 40px;
     color: #9e9e9e;
 }
 
 .category {
     float: left;
     color: #9e9e9e;
-    font-size: 15px;
+    font-size: 30px;
 }
 
 .comment {
     float: right;
     color: #9e9e9e;
-    font-size: 15px;
+    font-size: 30px;
 }
 
 .content {
-    margin: 10px;
+    margin: 40px;
 }
 
 p {
     color: #333;
     font-size: 20px;
+    line-height: 60px;
 }
 
 .content p{
     color: #555;
-    font-size: 20px;
+    font-size: 40px;
 }
 
 .content p img {
@@ -60,6 +62,7 @@ p {
 .clearfix {
     clear: both;
 }
+
 
 .article-preview {
     /*height: 736px;*/
