--- a/public/src/assets/stylesheets/styles.css
+++ b/public/src/assets/stylesheets/styles.css
@@ -3515,7 +3515,7 @@ tbody.collapse.in {
   clear: both;
   font-weight: normal;
   line-height: 1.42857143;
-  color: #e74118;
+  color: #333;
   white-space: nowrap;
 }
 .dropdown-menu > li > a:hover,
