--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -4,23 +4,25 @@ body {
     line-height: 30px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
+    position: relative;
+
     margin: 0 auto;
     padding: 0;
     text-align: left;
 }
 
 .title {
-    font-size: 80px;
+    font-size: 30px;
     font-weight: bold;
     color: #333;
     text-align: left;
     margin: 30px;
-    line-height: 80px;
+    line-height: 40px;
 }
 
 .subtitle {
     margin: 30px;
-    font-size: 40px;
+    font-size: 5px;
 }
 
 .description{
@@ -32,28 +34,29 @@ body {
 .category {
     float: left;
     color: #9e9e9e;
-    font-size: 40px;
+    font-size: 20px;
 }
 
 .comment {
     float: right;
     color: #9e9e9e;
-    font-size: 40px;
+    font-size: 20px;
 }
 
 .content {
     margin: 30px;
+
 }
 
 p {
     color: #333;
     font-size: 40px;
-    line-height: 80px;
+    line-height: 40px;
 }
 
 .content p{
     color: #555;
-    font-size: 40px;
+    font-size: 20px;
 }
 
 .content p img {
@@ -68,4 +71,9 @@ p {
 .article-preview {
     /*height: 736px;*/
     overflow-y: scroll;
+    max-width:800px;
+    margin: auto;
+    width: 90%;
+    alignment: center;
+    position: absolute;
 }
