--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -71,9 +71,9 @@ p {
 .article-preview {
     /*height: 736px;*/
     overflow-y: scroll;
-    max-width:800px;
+    /*max-width:1000px;*/
     margin: auto;
-    width: 90%;
+    /*width: 90%;*/
     alignment: center;
     position: absolute;
 }
