--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -1,7 +1,6 @@
 body {
     background-color: #FFF1E0;
     letter-spacing: 0.5px;
-    line-height: 30px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
     position: relative;
@@ -12,39 +11,39 @@ body {
 }
 
 .title {
-    font-size: 30px;
+    font-size: 25px;
     font-weight: bold;
     color: #333;
     text-align: left;
-    margin: 30px;
+    margin-bottom: 24px;
     line-height: 40px;
 }
 
 .subtitle {
-    margin: 30px;
+    /*margin: 30px;*/
     font-size: 5px;
 }
 
 .description{
-    margin: 30px;
+    margin-top: 25px;
     color: #9e9e9e;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 .category {
     float: left;
     color: #9e9e9e;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 .comment {
     float: right;
     color: #9e9e9e;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 .content {
-    margin: 30px;
+    /*margin: 30px;*/
 
 }
 
@@ -56,7 +55,8 @@ p {
 
 .content p{
     color: #555;
-    font-size: 20px;
+    font-size: 18px;
+    line-height: 27px;
 }
 
 .content p img {
@@ -72,8 +72,8 @@ p {
     /*height: 736px;*/
     overflow-y: scroll;
     /*max-width:1000px;*/
-    margin: auto;
-    /*width: 90%;*/
+    margin: 50px;
+    width: 95%;
     alignment: center;
     position: absolute;
 }
