--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -1,9 +1,7 @@
 body {
     background-color: #FFF1E0;
-    letter-spacing: 0.5px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-
-    position: relative;
+    /*letter-spacing: 0.5px;*/
+    font-family: Microsoft Yahei, "Helvetica Neue", Helvetica, Arial, sans-serif;
 
     margin: 0 auto;
     padding: 0;
@@ -72,8 +70,7 @@ p {
     /*height: 736px;*/
     overflow-y: scroll;
     /*max-width:1000px;*/
-    margin: 30px;
-    width: 95%;
+    /*margin: 20px;*/
+    width: 90%;
     alignment: center;
-    position: absolute;
 }
