--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -70,7 +70,7 @@ p {
     /*height: 736px;*/
     overflow-y: scroll;
     /*max-width:1000px;*/
-    /*margin: 20px;*/
+    margin: 20px;
     width: 90%;
     alignment: center;
 }
