--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -1,7 +1,7 @@
 body {
     background-color: #FFF1E0;
     /*letter-spacing: 0.5px;*/
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Microsoft Yahei", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
     margin: 0 auto;
     padding: 0;
