--- a/public/src/assets/stylesheets/styles.css
+++ b/public/src/assets/stylesheets/styles.css
@@ -3123,8 +3123,8 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #adadad;
+  border-color: #adadad;
 }
 .btn-primary .badge {
   color: #337ab7;
