--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -3,7 +3,7 @@ body {
     /*letter-spacing: 0.5px;*/
     font-family: "Heiti SC", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
-    margin: 0 auto;
+    margin: 17px auto;
     padding: 0;
     text-align: left;
 }
