--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -4,7 +4,7 @@ body {
     font-family: "Heiti SC", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
     margin: 17px auto;
-    padding: 0;
+    padding: 20px;
     text-align: left;
 }
 
