--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -69,7 +69,7 @@ p {
 
 .article-preview {
     /*height: 736px;*/
-    overflow-y: hidden;
+    /*overflow-y: hidden;*/
     /*max-width:1000px;*/
     /*margin: 17px;*/
     /*width: 90%;*/
