--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -8,7 +8,7 @@ body {
 }
 
 .title {
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
     color: #333;
     text-align: left;
@@ -34,10 +34,12 @@ body {
 }
 
 .comment {
-    float: right;
+    right: 10px;
     color: #9e9e9e;
     font-size: 15px;
     min-width: 80px;
+    position: absolute;
+
 }
 
 .content {
@@ -76,12 +78,17 @@ p {
 
 .recommend_container{
     height: 80px;
+    padding: 10px;
+}
 
+.recommend_title{
+    font-size: 17px;
+    color: black;
 }
 
 .recommend_subtitle{
     color: #9e9e9e;
-    font-size: 14px;
+    font-size: 10px;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
@@ -106,7 +113,6 @@ p {
 
 .recommend_list{
     margin: 0 auto;
-    padding: 10px;
 }
 
 .comment_list{
@@ -115,8 +121,10 @@ p {
 }
 
 .recommend_icon{
-    padding-right: 15px;
-    padding-bottom: 10px;
+    padding-right: 90px;
+    padding-top: 10px;
+    width: 80px;
+    height: 60px;
 }
 
 .article_divider{
@@ -125,7 +133,11 @@ p {
     padding-left:10%;
 }
 
+.comment_content{
+    color: black;
+}
 .comment_delete{
+    padding-top: 5px;
     margin: 0 auto;
     color: #9e9e9e;
     padding-left: 13px;
@@ -135,6 +147,7 @@ p {
     margin: 0 auto;
     color: #9e9e9e;
     font-size: 10px;
+    text-align: center;
 }
 
 .article-preview {
