--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -18,7 +18,7 @@ body {
 
 .subtitle {
     /*margin: 30px;*/
-    font-size: 5px;
+    font-size: 12px;
 }
 
 .description{
@@ -30,13 +30,13 @@ body {
 .category {
     float: left;
     color: #9e9e9e;
-    font-size: 15px;
+    /*font-size: 15px;*/
 }
 
 .comment {
     right: 10px;
     color: #9e9e9e;
-    font-size: 15px;
+    /*font-size: 15px;*/
     min-width: 80px;
     position: absolute;
 
