--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -13,12 +13,14 @@ body {
     color: #333;
     text-align: left;
     margin-bottom: 24px;
-    line-height: 40px;
+    line-height: 25px;
 }
 
 .subtitle {
     /*margin: 30px;*/
     font-size: 12px;
+    line-height: 30px;
+
 }
 
 .description{
@@ -44,7 +46,15 @@ body {
 
 .content {
     /*margin: 30px;*/
+}
 
+
+.content img{
+    /*padding:10px; width:300px; height:50px;*/
+    /*border: 5px solid #dedede;*/
+    /*-moz-border-radius: 15px;*/
+    /*-webkit-border-radius: 15px;*/
+    border-radius:5px;
 }
 
 p {
@@ -55,7 +65,7 @@ p {
 
 .content p{
     color: #555;
-    font-size: 18px;
+    font-size: 15px;
     line-height: 27px;
 }
 
