--- a/public/src/css/preview.css
+++ b/public/src/css/preview.css
@@ -99,14 +99,14 @@ p {
 }
 .recommend_title{
     height: 70px;
-    font-size: 16px;
-    color: black;
+    font-size: 15px;
+    color: #333;
     line-height:20px;
 }
 
 .recommend_subtitle{
     color: #9e9e9e;
-    font-size: 12px;
+    font-size: 11px;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
